--- a/public/css/tictactoe-room.css
+++ b/public/css/tictactoe-room.css
@@ -145,7 +145,7 @@
     position: absolute;
     top: 0px;
     font-size: 72px;
-    color:rgb(9, 255, 0);
+    color:white;
 }
 #choose-turn-title-prompt-container{
     font-size: 42px;
@@ -250,6 +250,9 @@
     font-size: 72px;
     color:white;
 }
+#wait-for-player-choose-symbol,#wait-for-player{
+    text-align: center;
+}
 #searching-for-player-container{
     width:100vw; height: 100vh;
     display: flex;
@@ -260,7 +263,7 @@
     position: absolute;
     top: 0px;
     font-size: 72px;
-    color:rgb(9, 255, 0);
+    color:white
 }
 .modal-dialog{
     max-width: 600px!important;
@@ -359,9 +362,6 @@
         color:blue;
         font-size: 20px;
     }
-    /* .modal-dialog{ */
-        /* max-width: 400px!important; */
-    /* } */
 }
 /* mobile phones */
 @media only screen 
@@ -370,6 +370,9 @@
   and (-webkit-min-device-pixel-ratio: 2) {
     #room{
         display: block;
+    }
+    #username{
+        padding-left: 0.5em;
     }
     /* remove desktop site elements from screen */
     #player-1-info,#player-2-info,#ttt-board-current-player{
@@ -390,6 +393,26 @@
         width:700px; height: 700px;
         background-color: blue;
     }
+    .player-1-wins{
+        width:60px; height:60px;
+        border: 10px solid rgb(9, 255, 0);
+    }
+    .player-2-wins{
+        width:60px; height:60px;
+        border: 10px solid blue;
+    }
+    .o-symbol{
+        font-size: 145px;
+    }
+    .x-symbol{
+        font-size: 190px;
+    }
+    #rematch-prompt{
+        font-size: 90px;
+    }
+    #rematch-true-btn,#rematch-false-btn{
+        font-size: 50px;
+    }
     #player-1-info-mobile, #player-2-info-mobile{
         width:20%; height: 100%;
         background-color: rgb(0, 0, 0);
@@ -400,7 +423,7 @@
         background-color: rgb(0, 0, 0);
         color:white;
         outline: 1px solid white;
-        font-size: 24px;
+        font-size: 50px;
     }
     #player-1-container-mobile{
         width: 100%; height: 60%;
@@ -421,5 +444,52 @@
         width: 100%; height: 40%;
         color:blue;
         font-size: 42px;
+    }
+    #choose-symbol-prompt-container{
+
+    }
+    #choose-symbol-title-prompt-container{
+        font-size: 70px;
+        color:black;
+    }
+    #X-btn,#O-btn{
+        font-size: 90px;
+    }
+    #choose-turn-title-prompt-container{
+        font-size: 60px;
+    }
+    #first-turn-btn,#second-turn-btn{
+        font-size: 45px;
+        padding:20px;
+    }
+    #player-turn-prompt-container{
+        font-size: 100px;
+    }
+    #player-declined-rematch-container{
+        font-size: 100px;
+    }
+    #set-winner-container{
+        font-size: 120px;
+    }
+    #opponent-lost-connection-container{
+        font-size: 100px;
+    }
+    #wait-player-choose-symbol-prompt-container{
+        font-size: 100px;
+    }
+    #wait-player-choose-turn-prompt-container{
+        font-size: 100px;
+    }
+    #player-declined-rematch-title{
+        font-size: 70px;
+    }
+    #player-redirect{
+        font-size: 40px;
+    }
+    #set-winner-title{
+        font-size: 72px;
+    }
+    #back-home{
+        font-size: 46px;
     }
 }
