--- a/public/css/tictactoe-room.css
+++ b/public/css/tictactoe-room.css
@@ -320,7 +320,7 @@
         display: none;
     }
     #ttt-container{
-        width:100%; height: 80%;
+        width:100%; height: 75%;
         background-color: rgb(0, 0, 0);
     }
     #ttt-board-container{
@@ -335,7 +335,7 @@
     }
     #mobile-players-details{
         display: flex;
-        height: 20%;
+        height: 25%;
     }
     #player-1-info-mobile, #player-2-info-mobile{
         width:20%; height: 100%;
@@ -361,6 +361,12 @@
         width: 100%; height: 55%;
         color:blue;
         font-size: 20px;
+    }
+    #player-1-username-mobile,#player-2-username-mobile{
+        width: 93px;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
     }
 }
 /* mobile phones */
@@ -426,24 +432,37 @@
         font-size: 50px;
     }
     #player-1-container-mobile{
-        width: 100%; height: 60%;
+        width: 100%; height: 35%;
         color:white;
         font-size: 58px;
     }
     #player-1-username-container-mobile{
-        width: 100%; height: 40%;
+        width: 100%; height: 65%;
         font-size: 42px;
         color:lightgreen;
+        display: flex;
+        align-items: flex-start;
+    }
+    #player-1-username-mobile,#player-2-username-mobile{
+        width: 185px;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
     }
     #player-2-container-mobile{
-        width: 100%; height: 60%;
+        width: 100%; height: 35%;
         color:white;
         font-size: 58px;
     }
     #player-2-username-container-mobile{
-        width: 100%; height: 40%;
+        width: 100%; height: 65%;
         color:blue;
         font-size: 42px;
+        display: flex;
+        align-items: flex-start;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
     }
     #choose-symbol-prompt-container{
 
